# opencv-motionDetect

./: CMakeLists.txt  edgeDetection.cpp  histogram.cpp  main.cpp  objDetect.cpp
